--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "nodemon src/server"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-touch-events": "^4.1.0",
