--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "debounce": "^1.2.1",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
