--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -17,6 +17,8 @@
     "socket.io-client": "^4.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-use-gesture": "^1.0.1",
+    "vue-use-spring": "0.0.2",
     "vue3-touch-events": "^4.1.0",
     "vuex": "^4.0.0-0"
   },
