--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "server": "set NODE_ENV=development&& set NODE_PORT=3000&& nodemon src/server",
-    "start": "set NODE_ENV=production&& set NODE_PORT=3200&& nodemon src/server"
+    "start": "export NODE_ENV=production&& export NODE_PORT=9090&& nodemon src/server"
   },
   "dependencies": {
     "core-js": "^3.6.5",
