--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -12,18 +12,18 @@
   "dependencies": {
     "@ionic/vue": "^5.6.3",
     "@ionic/vue-router": "^5.6.3",
-    "core-js": "^3.6.5",
+    "core-js": "^3.15.0",
     "debounce": "^1.2.1",
     "nodemon": "^2.0.7",
     "popmotion": "^8.7.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue": "^3.1.1",
+    "vue-router": "^4.0.9",
     "vue-use-gesture": "^1.0.1",
     "vue-use-spring": "0.0.2",
     "vue3-touch-events": "^4.1.0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -31,14 +31,14 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.1.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^7.11.1",
     "node-sass": "^4.12.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.1",
     "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
