--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "set NODE_ENV=development&& set NODE_PORT=3000&& vue-cli-service serve",
+    "serve": "export NODE_ENV=development&& export NODE_PORT=3000&& vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "server": "set NODE_ENV=development&& set NODE_PORT=3000&& nodemon src/server",
+    "server": "export NODE_ENV=development&& export NODE_PORT=3000&& nodemon src/server",
     "start": "export NODE_ENV=production&& export NODE_PORT=9090&& nodemon src/server"
   },
   "dependencies": {
