--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "server": "set NODE_ENV=development&& set NODE_PORT=3000&& nodemon src/server",
+    "server-l": "export NODE_ENV=development&& export NODE_PORT=3000&& nodemon src/server",
     "start": "set NODE_ENV=production&& set NODE_PORT=9090&& nodemon src/server"
   },
   "dependencies": {
