--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -14,10 +14,14 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
+    "ffmpeg": "0.0.4",
+    "hash-generator": "^0.1.0",
+    "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "uniqid": "^5.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue-use-gesture": "^1.0.1",
