--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
     "hash-generator": "^0.1.0",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
