--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -16,6 +16,7 @@
     "debounce": "^1.2.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.4.0",
+    "font-awesome": "^4.7.0",
     "hash-generator": "^0.1.0",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
