--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "debounce": "^1.2.1",
+    "express-basic-auth": "^1.2.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.4.0",
     "font-awesome": "^4.7.0",
