--- a/smart-table/package.json
+++ b/smart-table/package.json
@@ -13,12 +13,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "debounce": "^1.2.1",
     "express-basic-auth": "^1.2.0",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-static": "^4.4.0",
     "font-awesome": "^4.7.0",
     "hash-generator": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
